# StarEscrow

./: AUDIT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  TODO.md
.github/workflows/: ci.yml
clients/cli/: Cargo.toml
clients/cli/src/: deadline.rs  keypair.rs  main.rs  wasm_hash.rs  xdr.rs
clients/js/: README.md  package.json  tsconfig.json
clients/js/src/: client.test.ts  client.ts  index.ts  types.ts
contracts/escrow/: Cargo.toml
contracts/escrow/fuzz/: .gitignore  Cargo.toml
contracts/escrow/fuzz/corpus/fuzz_approve/: seed_full_fee  seed_max_amount  seed_normal  seed_oob_idx
contracts/escrow/fuzz/corpus/fuzz_cancel/: seed_cancel_active  seed_cancel_after_submit
contracts/escrow/fuzz/corpus/fuzz_create/: seed_amount_max  seed_amount_neg  seed_long_desc  seed_many_milestones
contracts/escrow/fuzz/fuzz_targets/: fuzz_approve.rs  fuzz_cancel.rs  fuzz_create.rs
contracts/escrow/src/: errors.rs  events.rs  lib.rs  nft.rs  storage.rs
contracts/escrow/test_snapshots/: bench_approve.1.json  bench_cancel.1.json  bench_create.1.json  bench_expire.1.json  bench_get_status.1.json  bench_submit_work.1.json  prop_balance_conservation_approve.1.json  prop_balance_conservation_approve.10.json  prop_balance_conservation_approve.100.json  prop_balance_conservation_approve.101.json  prop_balance_conservation_approve.102.json  prop_balance_conservation_approve.103.json  prop_balance_conservation_approve.104.json  prop_balance_conservation_approve.105.json  prop_balance_conservation_approve.106.json  prop_balance_conservation_approve.107.json  prop_balance_conservation_approve.108.json  prop_balance_conservation_approve.109.json  prop_balance_conservation_approve.11.json  prop_balance_conservation_approve.110.json  prop_balance_conservation_approve.111.json  prop_balance_conservation_approve.112.json  prop_balance_conservation_approve.113.json  prop_balance_conservation_approve.114.json  prop_balance_conservation_approve.115.json  prop_balance_conservation_approve.116.json  (+759 more)
contracts/factory/: Cargo.toml
contracts/governance/: Cargo.toml
docs/: BENCHMARKS.md  DEPLOYMENT.md  PROTOCOL.md  SECURITY.md
(+8 files in other folders)
