[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "star-escrow"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dialoguer = "0.11"
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
stellar-strkey = "0.0.16"
rand = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
