[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "star-escrow"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dialoguer = "0.11"
sha2 = "0.10"
hex = "0.4"
stellar-strkey = "0.0.9"
ed25519-dalek = "2"
