[package]
name = "escrow-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.escrow]
path = ".."

[dependencies.soroban-sdk]
version = "21.0.0"
features = ["testutils", "alloc"]

# Fuzz targets must be compiled as binaries
[[bin]]
name = "fuzz_create"
path = "fuzz_targets/fuzz_create.rs"
test = false
doc = false

[[bin]]
name = "fuzz_approve"
path = "fuzz_targets/fuzz_approve.rs"
test = false
doc = false

[[bin]]
name = "fuzz_cancel"
path = "fuzz_targets/fuzz_cancel.rs"
test = false
doc = false
